test_translator/tests/data/checkpoint_1/errors/18_no_matching_entrypoint/solution.py
# Solution has syntax error - will fail to import
def target(x)
    return x
